# vitis

./: .gitignore  .travis.yml  Arc.cpp  Arc.h  Brewfile  CITATION.cff  CMakeLists.txt  CellList.m  CheckConcatCorner.m  DataType.h  Doxyfile  DoxygenLayout.xml  EnableInput.h  EnableNode.cpp  EnabledExpandedNode.h  EnabledSubSystem.cpp  EvalWithinBlockScope.m  ExpandBlocks.m  ExpandConst.m  ExpandDelay.m  ExpandFIR.m  ExpandMaster.m  ExpandMultiInputSingleOutputNoStateOp.m  ExpandOp.m  ExpandProduct.m  ExpandSum.m  ExpandTappedDelay.m  ExpandVectorConcat.m  ExpandedNode.cpp  GetParamEval.m  GraphArc.m  GraphMLParameter.cpp  GraphMLParameter.h  GraphNode.m  LICENSE  Node.h  PopulateNodeParametersFromSimulink.m  Port.h  README.md  SimulinkType.m  (+14 more)
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: cloc.yml  cmake.yml  cyclopsDemoBuildTest.yml
Docker/: .gitignore  Dockerfile  Dockerfile.CLion.remote-cpp-env  Dockerfile.base  Dockerfile.fromLocal  createContainerAndLocalImageWithMappingAndStart.sh  createContainerFromRemoteImageWithMappingAndStart.sh  createContainerWithMapping.sh  createLocalBaseContainerImage.sh  createLocalContainerImage.sh  createLocalContainerImageFromLocalBase.sh  pushBaseContainerImage.sh  pushContainerImage.sh
ExternLic/: googleTestLic.txt  xerces-cLic.txt
scripts/bash/: clangCoverage.sh  gccCoverage.sh
scripts/matlab/: BusCleanup.m  CellList.m  CheckConcatCorner.m  CheckSelectCorner.m  CleanupFunctionTemplate.m  ConfigFunctionTemplate.m  CreateStateFlowCodeGenCS.m  CreateStateFlowCodeGenCS_R2020a.m  CreateStateFlowCodeGenCS_Standalone.m  EvalWithVars.m  ExpandBlocks.m  ExpandConst.m  ExpandDataTypeDuplicate.m  ExpandDelay.m  ExpandFIR.m  ExpandGain.m  ExpandMaster.m  ExpandMultiInputSingleOutputNoStateOp.m  ExpandSpecial.m  ExpandSwitch.m  ExpandTappedDelay.m  GetNodeStatistics.m  GetParamEval.m  GraphArc.m  GraphNode.m  PopulateNodeParametersFromSimulink.m  PopulateTopLevelNodeWorkspaceVars.m  SimulinkType.m  VectorFan.m  anyToString.m  assigninHere.m  bitGrowAdd.m  downsample_demo_tests.slx  example_design_enabled.slx  example_design_no_enable.slx  expansionTests.slx  findInnerInputPortBlock.m  findOuterOutputPort.m  getSimulinkInputPortHandle.m  getSimulinkOutputPortHandle.m  (+19 more)
src/Blocking/: BlockingBoundary.cpp  BlockingBoundary.h  BlockingDomain.cpp  BlockingDomain.h  BlockingDomainBridge.cpp  BlockingDomainBridge.h  BlockingHelpers.cpp  BlockingHelpers.h  BlockingInput.cpp  BlockingInput.h  BlockingOutput.cpp  BlockingOutput.h
src/BusNodes/: Concatenate.cpp  Concatenate.h  VectorFan.cpp  VectorFan.h  VectorFanIn.cpp  VectorFanIn.h  VectorFanOut.cpp  VectorFanOut.h
src/Emitter/: MultiThreadEmit.cpp  MultiThreadEmit.h  SingleThreadEmit.cpp  SingleThreadEmit.h
src/Estimators/: CommunicationEstimator.cpp  CommunicationEstimator.h  ComputationEstimator.cpp  ComputationEstimator.h  EstimatorCommon.cpp  EstimatorCommon.h  PartitionCrossing.cpp  PartitionCrossing.h  PartitionNode.cpp  PartitionNode.h
src/Flows/: MultiThreadGenerator.cpp  MultiThreadGenerator.h  SingleThreadGenerator.cpp  SingleThreadGenerator.h
src/General/: DSPHelpers.cpp  DSPHelpers.h  EmitterHelpers.cpp  EmitterHelpers.h  ErrorHelpers.cpp  ErrorHelpers.h  FileIOHelpers.cpp  FileIOHelpers.h  FixedPointHelpers.cpp  FixedPointHelpers.h  GeneralHelper.cpp  GeneralHelper.h  GraphAlgs.cpp  GraphAlgs.h  MultiThreadEmitterHelpers.cpp  MultiThreadEmitterHelpers.h  ThreadCrossingFIFOParameters.cpp  ThreadCrossingFIFOParameters.h  TopologicalSortParameters.cpp  TopologicalSortParameters.h
src/GraphCore/: Arc.cpp  Arc.h  CExpr.cpp  CExpr.h  Context.cpp  Context.h  ContextContainer.cpp  ContextContainer.h  ContextFamilyContainer.cpp  ContextHelper.h  (+55 more)
test/: CMakeLists.txt
test/src/: DSPHelperTests.cpp  DSPTestHelper.cpp  DSPTestHelper.h  DSP_Stateflow_CoarseCFO_est.cpp  DSP_TestAGC.cpp  DSP_TestFastRxBaseband.cpp  EnabledSubsystemDesignValidator.cpp  EnabledSubsystemDesignValidator.h  GcdTest.cpp  GraphTestHelper.cpp  GraphTestHelper.h  LUTDesignValidator.cpp  LUTDesignValidator.h  MathSanityCheck.cpp  NestedSubSystemValidator.cpp  NestedSubSystemValidator.h  SimpleDesignValidator.cpp  SimpleDesignValidator.h  StronglyConnectedComponents.cpp  TestDataType.cpp  TestEnabledDesign.cpp  TestEnabledSubsys.cpp  TestFixedPointConvert.cpp  TestLutSubsystem.cpp  TestNestedSubsystems.cpp  TestNumericValue.cpp  TestSimulinkExportReImport.cpp  TestSimulinkImport.cpp
test/stimulus/simulink/basic/: commented.graphml  enabled.graphml  enabled_float.graphml  graphml_test_cases.slx  graphml_test_cases_c_validation.slx  lut_subsystem.graphml  nested.graphml  non_input_drivers.graphml  simple.graphml  switch_subsytem.graphml  testSimulinkToGraphML.m
test/stimulus/simulink/dsp/: agc.graphml
test/stimulus/simulink/expansion/: ConstantAndDelayExpansion.graphml  ConstantAndGain.graphml  ConstantAndSwitch.graphml  ConstantOnly.graphml  FIRExpansion.graphml  FIRRealBench.graphml  FIRRealBenchAllDistinct.graphml  FIRRealBenchDirectForm.graphml  FIRRealBenchLarge.graphml  ScalarVectorMixOperator.graphml  TappedDelayExpansion.graphml  VecConcatAndSelect.graphml  firBench.slx  firBench_cValidation.slx  runExpansionTestGeneration.m
test/stimulus/simulink/multirate/: multirate_tests.slx
test/stimulus/simulink/partitionContext/: splitPartition.graphml  splitPartition.slx
test/stimulus/simulink/stronglyConnectedComponents/: simpleConnectedComponentTest.graphml  simpleConnectedComponentTestDelaySplit8SinglePart.graphml  simpleConnectedComponentTestSinglePart.graphml  stronglyConnectedComponentsClockDomain.graphml  stronglyConnectedComponentsTest.slx  stronglyConnectedComponentsTestDesignWithFIRFilter.graphml
test/stimulus/simulink/vector/: vectorTest.slx  vector_DUT.graphml
test/stimulus/simulink/vector2/: vector2.slx  vector2_DUT.graphml
test/stimulus/xml/basic/: multiNewlineTextNodes.xml  newlineAndGenuineMultilineTextNodes.xml  newlineAndGenuineTextNodes.xml  newlineTextNodes.xml  noTextNodes.xml  oneNewlineTextNode.xml
test/stimulus/xml/multirate/: MultipleClockDomainSystem.graphml
(+176 files in other folders)
